fix (header section): remove gap in tablet and mobile size

--- a/src/sections/Header/Header.module.css
+++ b/src/sections/Header/Header.module.css
@@ -6,7 +6,6 @@
   background-color: var(--color-white);
   padding: 0.75rem 0;
   position: relative;
-  z-index: 100;
 }
 
 .container {
@@ -101,6 +100,7 @@
 
   .navList {
     width: 100%;
+    gap: 0;
     flex-wrap: wrap;
     justify-content: space-between;
   }
